Wed Nov  4 17:54:31 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ccm/ComponentServer/CCM_ComponentServer.mpc:
        * ciao/ComponentServer/CIAO_ComponentServer.mpc:
          Only generate the export files using one idl file

Wed Nov  4 13:38:31 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/docs/DDS for CCM FTF 04Nov09.doc:
        * connectors/dds4ccm/docs/DDS4CCM v1-0 batch6.odt:
        * connectors/dds4ccm/docs/dds4CCM v1.0 NT v5.idl3p:
          Batch 6 documents

Wed Nov  4 12:48:31 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE/Deployment/Deployment_DeploymentPlan.idl:
          Escaped MirrorPort, it is a reserved keyword with the changes
          in TAO_IDL from yesterday

Wed Nov  4 11:50:31 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ccm/ComponentServer/CCM_ComponentServer.mpc:
          Reduced the number of source files generates, generate
          export files

        * ccm/ComponentServer/DAnCE_ComponentServer_stub_export.h:
        * ccm/ComponentServer/DAnCE_ComponentServer_svnt_export.h:
          Removed, will be generated by TAO_IDL from now

Wed Nov  4 11:30:31 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/ComponentServer/CIAO_ComponentInstallation_Impl.h
        * DAnCE/DomainApplication/Domain_Application_Impl.h
        * DAnCE/DomainApplicationManager/DomainApplicationManager_Impl.h
        * DAnCE/DomainApplicationManager/Node_Locator.h
        * DAnCE/ExecutionManager/ExecutionManager_Impl.h
        * DAnCE/ExecutionManager/ExecutionManager_Module.h
        * DAnCE/NodeApplication/ComponentAttributesSetter.h
        * DAnCE/NodeApplication/NodeApplication_Impl.h
        * DAnCE/NodeApplication/ServerActivator_Impl.h
        * DAnCE/NodeApplicationManager/NodeApplicationManager_Impl.h
        * DAnCE/NodeManager/Node_Manager_Module.h
        * DAnCE/NodeManager/NodeManager_Impl.h
        * DAnCE/Plan_Launcher/Plan_Launcher.h