@@ -3,7 +3,7 @@
  * @author William R. Otte <wotte@dre.vanderbilt.edu>
  * $Id$
  * Failure code definitions for CIAO.  The VID is based on that of TAO, but
- * our failure reasons start at that base since this is a different namespace. 
+ * our failure reasons start at that base since this is a different namespace.
  */
 
 #ifndef CIAO_FAILUREREASONS_IDL
@@ -15,12 +15,10 @@ module CIAO
 {
   const Components::FailureReason VID = 0x54410000;
   const Components::FailureReason MAX_FAILURE = VID | 0xfff;
-  
+
   // Container failures
-  
   const Components::FailureReason SERVER_SPAWN_FAILURE           = VID | 0x001;
   const Components::FailureReason CALLBACK_TIMEOUT_EXCEEDED      = VID | 0x002;
-  
 };
 
 #endif
